# AI-Principles-and-Applications

HW2/: .gitignore  CMakeLists.txt  TestPatterns.txt  build.bat
HW2/include/: GameBoard.h  Queen.h
HW2/src/: GameBoard.cpp  main.cpp
